tests/snapshots/binds__bind_append_and_select@001.snap
---
source: tests/binds.rs
description: "input: items [\"a\", \"\", \"b\", \"c\"]\noptions: -m --bind ctrl-f:append-and-select"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  c                                                                             "
"  b                                                                             "
"                                                                                "
"> a                                                                             "
"  4/4                                                                        0/0"
">                                                                               "
cursor: (24, 3)
