tests/snapshots/binds__bind_append_and_select@002.snap
---
source: tests/binds.rs
description: "input: items [\"a\", \"\", \"b\", \"c\"]\noptions: -m --bind ctrl-f:append-and-select\nafter:\n  @type \"xyz\""
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  0/4                                                                        0/0"
"> xyz                                                                           "
cursor: (24, 6)
