tests/snapshots/binds__bind_append_and_select@003.snap
---
source: tests/binds.rs
description: "input: items [\"a\", \"\", \"b\", \"c\"]\noptions: -m --bind ctrl-f:append-and-select\nafter:\n  @ctrl 'f'"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
">>xyz                                                                           "
"  1/5 [1]                                                                    0/0"
"> xyz                                                                           "
cursor: (24, 6)
