tests/snapshots/binds__bind_change.snap
---
source: tests/binds.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  10                                                                            "
"  19                                                                            "
"  18                                                                            "
"  17                                                                            "
"  16                                                                            "
"  15                                                                            "
"  14                                                                            "
"  13                                                                            "
"  12                                                                            "
"> 1                                                                             "
"  10/10                                                                      0/0"
">                                                                               "
cursor: (24, 3)
